8152773: C2: LoadNode properties aren't preserved when converting between signed/unsigned variants

Reviewed-by: jrose, kvn